- 2023-02-22 v1.9.0 cage ::

  This version added two new commands to hide/show the tannotation's text:

  - annotate-toggle-annotation-text :: shows or hides annotation's text under cursor;
  - annotate-toggle-all-annotations-text :: shows or hides the annotation's text in the whole buffer.

- 2022-12-15 v1.8.5 cage ::

  This version fixed a regression that prevented to delete annotations
  when disabling annotation-mode.

- 2022-12-15 v1.8.4 cage ::

  This versions prevented printing of a warning

  `annotate-save-annotations' printed a warning  if the buffer was not
  based on a file's contents. But  the warning was printed even if the
  buffer contained no annotations at all.

  This  version prints  the warning  about  missing file  only if  the
  buffer is annotated (i.e. contains at least an annotation).

- 2022-11-30 v1.8.3 cage ::

  This versions fixed a bug that prevented annotations of info files.

  Also opening of annotated remote files should be faster.

- 2022-10-20 v1.8.2 cage ::

  This version fixed a crash that occurred when visiting an annotated
  buffer using TRAMP.

  Thanks  to  gsingh93  for  discovering  the  bug  and  providing  an
  immensely useful help.

- 2022-10-20 v1.8.1 cage ::

  This version  fix the command  ~annotate-integrate-annotations~ that
  was corrupting the buffer containing the annotations, when used.

- 2022-09-21 v1.8.0 cage ::

  This version  allows printing  of the  annotation in  the minibuffer
  when the cursor is placed over an annotated text region.

  To  activate this  feature set  to non  nil the  values of  these two
  customizable variables:

  - ~annotate-use-echo-area~
  - ~annotate-print-annotation-under-cursor~

- 2022-08-02 v1.7.2 cage ::

  This version  removed an error  signalled when closing  an annotated
  indirect  buffer.  Instead,  when  an annotated  indirect buffer  is
  killed annotate-mode will clone it into a new regular buffer so that