@@ -97,19 +97,20 @@ can take advantage of its packages generated files management.
 ** keybindings
 
 *** ~C-c  C-a~ (function annotate-annotate)
-    Creates  a new annotation  for that
-    region. With no active region, ~C-c C-a~ will create an annotation for
-    the word  under point. If point  is on an annotated  region, ~C-c C-a~
-    will edit that annotation instead of  creating a new one. Clearing the
-    annotation deletes them.
+    Creates a new annotation for that region.
 
-    If ~annotate-annotation-confirm-deletion~ is  non nil (the default
+    With no active region, ~C-c C-a~ will create an annotation for the
+    word under point. If point is on an annotated region, ~C-c C-a~
+    will edit that annotation instead of creating a new one. Clearing
+    the annotation deletes them.
+
+    If ~annotate-annotation-confirm-deletion~ is non nil (the default
     is *nil*) a confirmation action is asked, using ~y-or-n-p~, to the
     user before actually remove the annotation.
 
-    If point  is the newline  character and the  customizable variable
-    ~annotate-endline-annotate-whole-line~ is not  nil (default is non
-    nil)  the whole  line is  annotated (or  the next  if the  line is
+    If point is the newline character and the customizable variable
+    ~annotate-endline-annotate-whole-line~ is not nil (default is non
+    nil) the whole line is annotated (or the next if the line is
     empty).
 
     If the line contains a single annotation that cover all the line
@@ -117,16 +118,22 @@ can take advantage of its packages generated files management.
     ~annotate-endline-annotate-whole-line~ is nil annotating a newline
     will signal an error.
 
+    With a numeric prefix the annotations will be displayed with the
+    faces indicated in ~annotate-endline-annotate-whole-line~ and
+    ~annotate-annotation-text-faces~, respectively. The numeric
+    prefix is used as index in the lists bound to the aforementioned
+    variables.
+
+    The first theme can be addressed by the prefix ~1~, the second by
+    the prefix ~2~ and so on.
+
 **** related customizable variable
      - ~annotate-annotation-column~;
      - ~annotate-annotation-confirm-deletion~;
      - ~annotate-annotation-max-size-not-place-new-line~;
      - ~annotate-annotation-position-policy~;
-     - ~annotate-annotation-secondary~;
-     - ~annotate-annotation~;
      - ~annotate-endline-annotate-whole-line~;
-     - ~annotate-highlight-secondary~;
-     - ~annotate-highlight~.
+     - ~annotate-annotation-text-faces~.
 
 *** ~C-c C-d~
     Delete an annotation under point, if such annotation exists.
